<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="100dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/guardians_of_the_galaxy"
        android:contentDescription="@string/movie_poster" />

    <TextView
        android:id="@+id/isWatchlistText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="8dp"
        android:text="@string/on_my_watchlist"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/poster"
        app:layout_constraintStart_toEndOf="@+id/poster" />

    <TextView
        android:id="@+id/timeGenresText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/gray"
        android:text="@string/_2h_1min_action_adventure_comedy"
        app:layout_constraintBottom_toBottomOf="@+id/poster"
        app:layout_constraintStart_toEndOf="@+id/poster"
        app:layout_constraintTop_toTopOf="@+id/poster" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/title_temp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/timeGenresText"
        app:layout_constraintStart_toStartOf="@+id/timeGenresText" />
</androidx.constraintlayout.widget.ConstraintLayout>